--- a/src/views/image.ejs
+++ b/src/views/image.ejs
@@ -15,12 +15,12 @@
 
 
 <body>
-    <div class="container p-2">
+    <div class="container p-4">
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
                     <img src="<%= imagen.path  %>" class="card-img-top image-detail">
-                    <p class="card-text"><%= format(imagen.created_at) %></p>
+                    <p class="card-text p-2"><%= format(imagen.created_at) %></p>
                     <div class="card-body">
                         <a href="/image/<%= imagen._id%>/delete" class="btn btn-danger btn-block">Delete image</a>
                     </div>
