--- a/src/views/upload.ejs
+++ b/src/views/upload.ejs
@@ -38,7 +38,8 @@
                             </div>
 
                             <div class="form-group">
-                                <button type="submit" class="btn btn-success btn-block">Upload</button>
+                                <button type="submit" class="btn btn-success btn-block"><i
+                                        class="fa-solid fa-arrow-up-from-bracket"></i></button>
                             </div>
                         </form>
                     </div>
